Continuación estructura inicial HTML

--- a/index.html
+++ b/index.html
@@ -40,39 +40,126 @@
                 <ul>
                     <li>
                         <h3>HTML5</h3>
-                        <div>
-                            <div>Hola</div>
+                        <div class="contenedor-progress-bar">
+                            <div class="progress-bar">Hola</div>
                         </div>
                     </li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>
+                        <h3>CSS3</h3>
+                        <div class="contenedor-progress-bar">
+                            <div class="progress-bar">Hola</div>
+                        </div>
+                    </li>
+                    <li>
+                        <h3>JavaScript</h3>
+                        <div class="contenedor-progress-bar">
+                            <div class="progress-bar">Hola</div>
+                        </div>
+                    </li>
+                    <li>
+                        <h3>Git & GitHub</h3>
+                        <div class="contenedor-progress-bar">
+                            <div class="progress-bar">Hola</div>
+                        </div>
+                    </li>
+                    <li>
+                        <h3>Base de Datos</h3>
+                        <div class="contenedor-progress-bar">
+                            <div class="progress-bar">Hola</div>
+                        </div>
+                    </li>
+                    <li>
+                        <h3>Python</h3>
+                        <div class="contenedor-progress-bar">
+                            <div class="progress-bar">Hola</div>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div class="habilidades-blandas">
-                <h2></h2>
+                <h2>Habilidades Blandas</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Aprendizaje Autonomo</li>
+                    <li>Trabajo en Equipo</li>
+                    <li>Liderazgo</li>
+                    <li>Comunicación Acertiva</li>
+                    <li>Generación de Ideas</li>
+                    <li>Creatividad</li>
+                    <li>Trabajo Bajo Presion</li>
                 </ul>
             </div>
             <div class="hobbies">
-                <h2></h2>
+                <h2>Hobbies</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Lectura</li>
+                    <li>Investigar</li>
+                    <li>Deporte - Gimnasio</li>
+                    <li>Crecimiento Presonal</li>
                 </ul>
             </div>
         </section>
         <section class="contenido-derecha">
-
+            <div class="experiencia">
+                <h2>Experiencia</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quis laboriosam vitae vel necessitatibus! Dignissimos adipisci consectetur numquam repellendus nemo alias non voluptate minus est! Voluptatum sequi totam adipisci ipsum?</p>
+            </div>
+            <div class="proyectos">
+                <h2>Proyectos</h2>
+                <ul>
+                    <li>
+                        <span>Bitácora de Trading----- </span>
+                        <a href="">https://...</a>
+                    </li>
+                    <li>
+                        <span>My Curriculum Vitae----- </span>
+                        <a href="">https://...</a></li>
+                    <li><span>Clone de Google----- </span><a href="">https://...</a>
+                    </li>
+                    <li>
+                        <span>Reproductor de Música----- </span>
+                        <a href="">https://...</a>
+                    </li>
+                    <li>
+                        <span>E-Comerce - Yard Sale----- </span>
+                        <a href="">https://...</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="educacion">
+                <h2>Educación</h2>
+                <ul>
+                    <li>
+                        <span>Curso1</span>
+                        <a href="">Ver certificado</a>
+                    </li> 
+                    <li>
+                        <span>Curso2</span>
+                        <a href="">Ver certificado</a>
+                    </li> 
+                    <li>
+                        <span>Curso3</span>
+                        <a href="">Ver certificado</a>
+                    </li>  
+                    <li>
+                        <span>Curso4</span>
+                        <a href="">Ver certificado</a>
+                    </li> 
+                    <li>
+                        <span>Curso5</span>
+                        <a href="">Ver certificado</a>
+                    </li> 
+                </ul>
+            </div>
+            <div class="links">
+                <ul>
+                    <li>
+                        <a href="">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 </body>
