Implementación de estilos en el encabezado

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
     <header class="encabezado">
         <div class="encabezado-superior">
-            <img src="" alt="foto perfil">
+            <img src="./img/foto.jpg" alt="foto perfil">
             <h1>Oscar Rojas Bedoya</h1>
             <h2>Desarrollador Web | Frontend Developer</h2>
         </div>
         <div class="encabezado-inferior">
             <div>
-                <img src="" alt="icono correo">
+                <img src="./icons/mensaje.png" alt="icono correo">
                 <a href="mailto:oscarrojasb.tec@gmail.com">oscarrojasb.tec@gmail.com</a>
             </div>
             <div>
-                <img src="" alt="icono ubicación">
+                <img src="./icons/ubicacion.png" alt="icono ubicación">
                 <p>Medellín - Colombia</p>
             </div>
             <div>
-                <img src="" alt="icono teléfono">
+                <img src="./icons/llamada.png" alt="icono teléfono">
                 <a href="tel:+57 304 526 2913">+57 304 526 2913</a>
             </div>
         </div>
