implementación de estilos CSS en la estructura del main

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>Curriculum Vitae Oscar Rojas</title>
+    <title>Curriculum Vitae | Oscar Rojas</title>
 </head>
 <body>
     <header class="encabezado">
@@ -16,15 +16,15 @@
         </div>
         <div class="encabezado-inferior">
             <div>
-                <img src="./icons/mensaje.png" alt="icono correo">
+                <img src="./icons/gmail.png" alt="icono correo">
                 <a href="mailto:oscarrojasb.tec@gmail.com">oscarrojasb.tec@gmail.com</a>
             </div>
             <div>
-                <img src="./icons/ubicacion.png" alt="icono ubicación">
+                <img src="./icons/marcador-de-posicion.png" alt="icono ubicación">
                 <p>Medellín - Colombia</p>
             </div>
             <div>
-                <img src="./icons/llamada.png" alt="icono teléfono">
+                <img src="./icons/telefono2.png" alt="icono teléfono">
                 <a href="tel:+57 304 526 2913">+57 304 526 2913</a>
             </div>
         </div>
@@ -33,7 +33,9 @@
         <section class="contenido-izquierda">
             <div class="perfil">
                 <h2>Perfil</h2>
-                <p></p>
+                <p>Hola, soy Oscar, ingeniero civil de la Universidad Nacional de Colombia, con mas de 7 años de experiencia en el campo de la ingeniería. Soy una persona apasionada por el mundo de la programación y esto me ha permitido aprobar una serie de cursos que me han dado un dominio importante en herramientas cómo HTML5, CSS3, JavaScript, Python, entre otras herramientas.
+                Actualmente estoy adelantando estudios para ser un proximo Full Stack, pero con los conocimientos que tengo actualmente, mi curiosidad y compromiso, sé que puedo ser de gran aporte para tu empresa.
+                </p>
             </div>
             <div class="skills">
                 <h2>Skills</h2>
@@ -41,37 +43,37 @@
                     <li>
                         <h3>HTML5</h3>
                         <div class="contenedor-progress-bar">
-                            <div class="progress-bar">Hola</div>
+                            <div class="progress-bar"></div>
                         </div>
                     </li>
                     <li>
                         <h3>CSS3</h3>
                         <div class="contenedor-progress-bar">
-                            <div class="progress-bar">Hola</div>
+                            <div class="progress-bar"></div>
                         </div>
                     </li>
                     <li>
                         <h3>JavaScript</h3>
                         <div class="contenedor-progress-bar">
-                            <div class="progress-bar">Hola</div>
+                            <div class="progress-bar"></div>
                         </div>
                     </li>
                     <li>
                         <h3>Git & GitHub</h3>
                         <div class="contenedor-progress-bar">
-                            <div class="progress-bar">Hola</div>
+                            <div class="progress-bar"></div>
                         </div>
                     </li>
                     <li>
                         <h3>Base de Datos</h3>
                         <div class="contenedor-progress-bar">
-                            <div class="progress-bar">Hola</div>
+                            <div class="progress-bar"></div>
                         </div>
                     </li>
                     <li>
                         <h3>Python</h3>
                         <div class="contenedor-progress-bar">
-                            <div class="progress-bar">Hola</div>
+                            <div class="progress-bar"></div>
                         </div>
                     </li>
                 </ul>
@@ -79,49 +81,68 @@
             <div class="habilidades-blandas">
                 <h2>Habilidades Blandas</h2>
                 <ul>
-                    <li>Aprendizaje Autonomo</li>
+                    <li>Autodidacta</li>
                     <li>Trabajo en Equipo</li>
                     <li>Liderazgo</li>
-                    <li>Comunicación Acertiva</li>
+                    <li>Comunicación Asertiva</li>
                     <li>Generación de Ideas</li>
                     <li>Creatividad</li>
-                    <li>Trabajo Bajo Presion</li>
+                    <li>Trabajo Bajo Presión</li>
                 </ul>
             </div>
             <div class="hobbies">
                 <h2>Hobbies</h2>
                 <ul>
-                    <li>Lectura</li>
-                    <li>Investigar</li>
-                    <li>Deporte - Gimnasio</li>
-                    <li>Crecimiento Presonal</li>
+                    <li>Leer</li>
+                    <li>Hacer deporte</li>
+                    <li>Aprender cosas nuevas</li>
+                    <li>Cocinar</li>
+                    <li>Practicar Senderismo</li>
+                    <li>Meditar</li>
                 </ul>
             </div>
         </section>
         <section class="contenido-derecha">
             <div class="experiencia">
                 <h2>Experiencia</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quis laboriosam vitae vel necessitatibus! Dignissimos adipisci consectetur numquam repellendus nemo alias non voluptate minus est! Voluptatum sequi totam adipisci ipsum?</p>
+                <p>Hasta la fecha no he tenido experiencia trabajando para una empresa o como Freelance, pero en este tiempo he desarrollado una serie de proyectos personales que me han permitido afianzar y practicar cada uno de los conceptos aprendidos.</p>
             </div>
             <div class="proyectos">
                 <h2>Proyectos</h2>
                 <ul>
                     <li>
-                        <span>Bitácora de Trading----- </span>
-                        <a href="">https://...</a>
+                        <div>
+                            <span>Bitácora de Trading</span>
+                            <span>-----></span>
+                            <a href="">Ver Proyecto</a>
+                        </div>
                     </li>
                     <li>
-                        <span>My Curriculum Vitae----- </span>
-                        <a href="">https://...</a></li>
-                    <li><span>Clone de Google----- </span><a href="">https://...</a>
+                        <div>
+                            <span>My Curriculum Vitae</span>
+                            <span>-----></span>
+                            <a href="">Ver Proyecto</a>
+                        </div>
+                    <li>
+                        <div>
+                            <span>E-Comerce - Yard Sale</span>
+                            <span>-----></span>
+                            <a href="">Ver Proyecto</a>
+                        </div>
                     </li>
                     <li>
-                        <span>Reproductor de Música----- </span>
-                        <a href="">https://...</a>
+                        <div>
+                            <span>Clone de Google</span>
+                            <span>-----></span>
+                            <a href="">Ver Proyecto</a>
+                        </div>
                     </li>
                     <li>
-                        <span>E-Comerce - Yard Sale----- </span>
-                        <a href="">https://...</a>
+                        <div>
+                            <span>Reproductor de Música</span>
+                            <span>-----></span>
+                            <a href="">Ver Proyecto</a>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -129,28 +150,86 @@
                 <h2>Educación</h2>
                 <ul>
                     <li>
-                        <span>Curso1</span>
-                        <a href="">Ver certificado</a>
+                        <div>
+                            <span>Terminal y Línea de Comandos</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
                     </li> 
                     <li>
-                        <span>Curso2</span>
-                        <a href="">Ver certificado</a>
+                        <div>
+                            <span>Git & GitHub</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
                     </li> 
                     <li>
-                        <span>Curso3</span>
-                        <a href="">Ver certificado</a>
+                        <div>
+                            <span>Introducción al Desarrollo Backend</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
                     </li>  
                     <li>
-                        <span>Curso4</span>
-                        <a href="">Ver certificado</a>
+                        <div>
+                            <span>Frontend Developer</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
                     </li> 
                     <li>
-                        <span>Curso5</span>
-                        <a href="">Ver certificado</a>
+                        <div>
+                            <span>HTML & CSS</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
+                    </li> 
+                    <li>
+                        <div>
+                            <span>Curso Profesional CSS - Grid</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
+                    </li> 
+                    <li>
+                        <div>
+                            <span>Diseño Web con Flexbox y CSS Grid</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
+                    </li> 
+                    <li>
+                        <div>
+                            <span>Curso Básico de JavaScipt</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div> 
+                    </li> 
+                    <li>
+                        <div>
+                            <span>Curso Práctico de JavaScipt</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
+                    </li> 
+                    <li>
+                        <div>
+                            <span>Curso Práctico de JavaScipt: Matemáticas y Estadística</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
+                    </li> 
+                    <li>
+                        <div>
+                            <span>Base de Datos</span>
+                            <span>-----></span>
+                            <a href="">Ver certificado</a>
+                        </div>
                     </li> 
                 </ul>
             </div>
             <div class="links">
+                <h2>Links</h2>
                 <ul>
                     <li>
                         <a href="">GitHub</a>
