Implementación parcial de media Query

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <section class="contenido-izquierda">
             <div class="perfil">
                 <h2>Perfil</h2>
-                <p>Hola, soy Oscar, ingeniero civil de la Universidad Nacional de Colombia, con mas de 7 años de experiencia en el campo de la ingeniería. Soy una persona apasionada por el mundo de la programación y esto me ha permitido aprobar una serie de cursos que me han dado un dominio importante en herramientas cómo HTML5, CSS3, JavaScript, Python, entre otras herramientas.
-                Actualmente estoy adelantando estudios para ser un proximo Full Stack, pero con los conocimientos que tengo actualmente, mi curiosidad y compromiso, sé que puedo ser de gran aporte para tu empresa.
+                <p>Hola, soy Oscar, ingeniero civil de la Universidad Nacional de Colombia, con mas de 7 años de experiencia en el campo de la ingeniería. Soy una persona apasionada por el mundo de la programación y es este interes el que me ha pérmitido adquirir un dominio importante en herramientas cómo HTML5, CSS3, JavaScript, Python, entre otras herramientas.
+                Actualmente continuo con mi ruta de parendizaje para convertirme proximamente en un desarrolador Full Stack, pero con los conocimientos que tengo actualmente, mi curiosidad y compromiso, sé que puedo ser de gran aporte para tu empresa.
                 </p>
             </div>
             <div class="skills">
@@ -48,6 +48,18 @@
                     </li>
                     <li>
                         <h3>CSS3</h3>
+                        <div class="contenedor-progress-bar">
+                            <div class="progress-bar"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <h3>Bootstrap</h3>
+                        <div class="contenedor-progress-bar">
+                            <div class="progress-bar"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <h3>Preprocesadores SCSS</h3>
                         <div class="contenedor-progress-bar">
                             <div class="progress-bar"></div>
                         </div>
@@ -172,7 +184,7 @@
                     </li>  
                     <li>
                         <div>
-                            <span>Frontend Developer</span>
+                            <span>Curso de Frontend Developer</span>
                             <span>-----></span>
                             <a href="">Ver certificado</a>
                         </div>
