Incorporación de la información en las etiquetas <a>

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <section class="contenido-izquierda">
             <div class="perfil">
                 <h2>Perfil</h2>
-                <p>Hola, soy Oscar, ingeniero civil de la Universidad Nacional de Colombia, con mas de 7 años de experiencia en el campo de la ingeniería. Soy una persona apasionada por el mundo de la programación y es este interes el que me ha pérmitido adquirir un dominio importante en herramientas cómo HTML5, CSS3, JavaScript, Python, entre otras herramientas.
-                Actualmente continuo con mi ruta de parendizaje para convertirme proximamente en un desarrolador Full Stack, pero con los conocimientos que tengo actualmente, mi curiosidad y compromiso, sé que puedo ser de gran aporte para tu empresa.
+                <p>Hola, soy Oscar, ingeniero civil de la Universidad Nacional de Colombia, con mas de 7 años de experiencia en el campo de la ingeniería. Soy una persona apasionada por el mundo de la programación, y es este interes el que me ha pérmitido adquirir un dominio importante en herramientas cómo HTML5, CSS3, JavaScript, Python, entre otras herramientas.
+                Actualmente continuo con mi ruta de parendizaje para convertirme proximamente en un desarrolador Full Stack, pero con los conocimientos que tengo actualmente, mi curiosidad y compromiso, sé que puedo ser de gran aporte para su empresa.
                 </p>
             </div>
             <div class="skills">
@@ -126,34 +126,34 @@
                         <div>
                             <span>Bitácora de Trading</span>
                             <span>-----></span>
-                            <a href="">Ver Proyecto</a>
+                            <a href="https://github.com/ApoloSeth/proyecto-bitacora-trading.git" target="_blank">Ver Proyecto</a>
                         </div>
                     </li>
                     <li>
                         <div>
                             <span>My Curriculum Vitae</span>
                             <span>-----></span>
-                            <a href="">Ver Proyecto</a>
+                            <a href="https://github.com/ApoloSeth/My_curriculum_vitae.git" target="_blank">Ver Proyecto</a>
                         </div>
                     <li>
                         <div>
                             <span>E-Comerce - Yard Sale</span>
                             <span>-----></span>
-                            <a href="">Ver Proyecto</a>
+                            <a href="https://github.com/ApoloSeth/Pagina-Yard-Sale.git" target="_blank">Ver Proyecto</a>
                         </div>
                     </li>
                     <li>
                         <div>
                             <span>Clone de Google</span>
                             <span>-----></span>
-                            <a href="">Ver Proyecto</a>
+                            <a href="https://github.com/ApoloSeth/Curso-Practico-HTML-CSS.git" target="_blank">Ver Proyecto</a>
                         </div>
                     </li>
                     <li>
                         <div>
                             <span>Reproductor de Música</span>
                             <span>-----></span>
-                            <a href="">Ver Proyecto</a>
+                            <a href="https://github.com/ApoloSeth/Reproductor-de-musica.git" target="_blank">Ver Proyecto</a>
                         </div>
                     </li>
                 </ul>
@@ -165,63 +165,70 @@
                         <div>
                             <span>Terminal y Línea de Comandos</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1Saj2Q--WW-a5Ys2bLuo6fhjMfDZY64RY/view?usp=sharing" target="_blank">Ver certificado</a>
                         </div>
                     </li> 
                     <li>
                         <div>
                             <span>Git & GitHub</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1Saj2Q--WW-a5Ys2bLuo6fhjMfDZY64RY/view?usp=sharing" target="_blank">Ver certificado</a>
                         </div>
                     </li> 
                     <li>
                         <div>
                             <span>Introducción al Desarrollo Backend</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1ngNlJbaVPUIGIebPp3CKHv4JxTaqFFQq/view?usp=sharing" target="_blank">Ver certificado</a>
                         </div>
                     </li>  
                     <li>
                         <div>
                             <span>Curso de Frontend Developer</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1-TAX8wTHcNPFvCeDheaXMvui1MEUxLMR/view?usp=sharing" target="_blank">Ver certificado</a>
+                        </div>
+                    </li> 
+                    <li>
+                        <div>
+                            <span>Curso Práctico de Frontend Developer</span>
+                            <span>-----></span>
+                            <a href="https://drive.google.com/file/d/1Ojdora2y7DLkQvvl_3CW4yOZoFlWLgqu/view?usp=sharing" target="_blank">Ver certificado</a>
                         </div>
                     </li> 
                     <li>
                         <div>
                             <span>HTML & CSS</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1sseSjMhq1DD40wV4VBBK8grGMqegYWes/view?usp=sharing" target="_blank">Ver certificado</a>
                         </div>
                     </li> 
                     <li>
                         <div>
                             <span>Curso Profesional CSS - Grid</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1BrUI_L1YyeiEtK8xeG7KXqi_u8S72kqu/view?usp=share_link" target="_blank">Ver certificado</a>
                         </div>
                     </li> 
                     <li>
                         <div>
                             <span>Diseño Web con Flexbox y CSS Grid</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1Jh6FVC-ja3R6uHWM6b2fq77rMtD1o52l/view?usp=share_link" target="_blank">Ver certificado</a>
                         </div>
                     </li> 
                     <li>
                         <div>
                             <span>Curso Básico de JavaScipt</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1wF86dx8m0IZQPX26b8mFVvOMbsHLmJcj/view?usp=share_link" target="_blank">Ver certificado</a>
                         </div> 
                     </li> 
                     <li>
                         <div>
                             <span>Curso Práctico de JavaScipt</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1u4YjhgdG4xdv2hYFYwvhoatO0nehwHxV/view?usp=share_link" target="_blank">Ver certificado</a>
                         </div>
                     </li> 
                     <li>
@@ -235,7 +242,7 @@
                         <div>
                             <span>Base de Datos</span>
                             <span>-----></span>
-                            <a href="">Ver certificado</a>
+                            <a href="https://drive.google.com/file/d/1416IqRvgNz7_ov00cvF37RA8KekYT5e0/view?usp=share_link" target="_blank">Ver certificado</a>
                         </div>
                     </li> 
                 </ul>
@@ -244,10 +251,10 @@
                 <h2>Links</h2>
                 <ul>
                     <li>
-                        <a href="">GitHub</a>
+                        <a href="https://github.com/ApoloSeth" target="_blank">GitHub</a>
                     </li>
                     <li>
-                        <a href="">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/oscar-rojas-bedoya-3a7312263" target="_blank">LinkedIn</a>
                     </li>
                 </ul>
             </div>
